8240295: hs_err elapsed time in seconds is not accurate enough

Reviewed-by: dholmes, sspitsyn